# Assignment04-05

./: CMakeLists.txt  Console.cpp  Console.h  Dog.cpp  Dog.h  DynamicArray.h  Exceptions.cpp  Exceptions.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tests.cpp  Tests.h  main.cpp
repository/: RepositoryAdoptedDogs.cpp  RepositoryAdoptedDogs.h  RepositoryShelterDogs.cpp  RepositoryShelterDogs.h
service/: ServiceAdmin.cpp  ServiceAdmin.h  ServiceUser.cpp  ServiceUser.h
